add more link text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Run Buddy-change</title>
     </head>
     <body>
-        <h2>RUN BUDDY</h2>
-        What we do 🏃
+        <h1>RUN BUDDY</h1>
+        What we do What You Do Your Trainers Reach Out
     </body>
 </html>
