header and nav changes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lan="en">
     <head>
-        <meta charset=""UTF-8"/>
-        <title>Run Buddy-change</title>
+        <link rel="stylesheet" href="assets/style.css"/>
     </head>
+    <meta charset="UTF-8"/>
+    <title>Run Buddy-change</title>
     <body>
     <!-- navigation -->
         <header>
@@ -29,6 +30,7 @@
             </li>
             </ul>
         </nav>
+    </body>
     </header>
 
 
